[feat] muestra de datos y colores

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div>
-            <h1>Bienvenido</h1>
+    <div id="root" class="content">
+        <h1>Bienvenido</h1>
     </div>
 </body>
 <script src="home.js"></script>
