--- a/pages/residencias/residencias.html
+++ b/pages/residencias/residencias.html
@@ -1,9 +1,30 @@
 <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="residencias.css">
 </head>
 <body>
-    <div>
+    <div class="content">
             <h1>Residencias</h1>
+            <div class="data">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Dirección</th>
+                            <th scope="col">Estado</th>
+                            <th scope="col">Residente</th>
+                        </tr>
+                    </thead>
+                    <tbody  id="residencias">
+    
+                    </tbody>
+                </table>
+            </div>
     </div>
 </body>
 <script src="residencias.js"></script>
