--- a/pages/residentes/residentes.html
+++ b/pages/residentes/residentes.html
@@ -1,10 +1,32 @@
 <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="residentes.css">
 </head>
 <body>
-    <div>
-            <h1>Residentes</h1>
-    </div>
+    <div class="content">
+        <h1>Residentes</h1>
+        <div class="data">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Identificación</th>
+                        <th scope="col">Correo</th>
+                        <th scope="col">Teléfono</th>
+                    </tr>
+                </thead>
+                <tbody  id="residentes">
+
+                </tbody>
+            </table>
+        </div>
+</div>
 </body>
 <script src="residentes.js"></script>
 </html>
