--- a/pages/residencias/residencias.html
+++ b/pages/residencias/residencias.html
@@ -1,31 +1,75 @@
 <head>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="residencias.css">
 </head>
+
 <body>
     <div class="content">
-            <h1>Residencias</h1>
-            <div class="data">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Dirección</th>
-                            <th scope="col">Estado</th>
-                            <th scope="col">Residente</th>
-                        </tr>
-                    </thead>
-                    <tbody  id="residencias">
-    
-                    </tbody>
-                </table>
+        <h1 class="text-center w-100">Residencias</h1>
+        <button type="button" class="btn btn-success" id="btnAddResidencia" data-bs-toggle="modal"
+            data-bs-target="#residenciaForm">
+            Agregar residencia
+        </button>
+
+        <div class="data">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Dirección</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Residente</th>
+                    </tr>
+                </thead>
+                <tbody id="residencias">
+
+                </tbody>
+            </table>
+        </div>
+
+        <div class="modal fade" id="residenciaForm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="residenciaFormLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="residenciaFormLabel">Agregar residencia</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" class="">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="direccion" placeholder="Dirección">
+                                <label for="direccion">Dirección</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <textarea class="form-control" placeholder="Ingresa una descipción..." id="descripcion"
+                                    style="height: 100px"></textarea>
+                                <label for="descripcion">Descripción</label>
+                            </div>
+                            <div class="form-floating">
+                                <select class="form-select" id="residente" aria-label="Floating label select example">
+                                    <option selected disabled>Seleccione una opción</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                                <label for="residente">Residente asociado</label>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Guardar</button>
+                    </div>
+                </div>
             </div>
+        </div>
     </div>
 </body>
 <script src="residencias.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
 </html>
