--- a/pages/residentes/residentes.html
+++ b/pages/residentes/residentes.html
@@ -1,15 +1,16 @@
 <head>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="residentes.css">
 </head>
+
 <body>
     <div class="content">
-        <h1>Residentes</h1>
+        <h1 class="text-center w-100">Residentes</h1>
+        <button type="button" class="btn btn-success" id="btnAddResidente" data-bs-toggle="modal"
+            data-bs-target="#residenteForm">
+            Agregar residente
+        </button>
         <div class="data">
             <table class="table table-striped">
                 <thead>
@@ -21,12 +22,51 @@
                         <th scope="col">Teléfono</th>
                     </tr>
                 </thead>
-                <tbody  id="residentes">
+                <tbody id="residentes">
 
                 </tbody>
             </table>
         </div>
-</div>
+        <div class="modal fade" id="residenteForm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="residenciaFormLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="residenciaFormLabel">Agregar residente</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" class="">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                                <label for="nombre">Nombre</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="identificacion" placeholder="Identificación">
+                                <label for="identificacion">Identificación</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="email" name="correo" class="form-control" id="correo" placeholder="Correo">
+                                <label for="correo">Correo</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" name="phone" class="form-control" id="telefono" placeholder="Teléfono">
+                                <label for="telefono">Teléfono</label>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="residentes.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
 </html>
